test case added for login

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 API_SECRET_KEY=secret123
 HASH_SALT=10
-MONGODB_URL="mongodb+srv://SwarnaIslam:<password>@cluster0.zukv2ws.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URL="mongodb+srv://swarna20242024:hFIzTDhOe3KMCxuh@cluster0.ot1hgcj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
